clean code
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>